Add splash screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name=".presentation.main.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Thmanyah">
+            android:theme="@style/Theme.ThmanyahTakeHome.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
